Bug 478269 - kwin_wayland crash when creating a folder with Dolphin with the filename dialog popping up
Summary: kwin_wayland crash when creating a folder with Dolphin with the filename dial...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.27.10
Platform: Arch Linux Linux
: HI crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 478973 479258 479387 480144 480496 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-08 16:00 UTC by chettoy
Modified: 2024-01-29 19:32 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
backtrace (29.04 KB, text/plain)
2023-12-08 16:00 UTC, chettoy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description chettoy 2023-12-08 16:00:55 UTC
Created attachment 164011 [details]
backtrace

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open Dolphin
2. Click "New Folder" or "New File" in Dolphin's right-click menu

OBSERVED RESULT
kde-wayland crash when the filename dialog pop up

EXPECTED RESULT
Dialog popup animation ends without crashing

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: ArchLinux
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.112.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
Once I opened a zip file with Ark and selected one and clicked "Preview", kde crashed and restarted. After that, I found that when I clicked "New Folder" or "New File" in Dolphin's right-click menu, kde crashed when the dialog popped up, but it's fine if I create a new folder on the desktop without Dolphin.
I used timeshift to go back to yesterday's btrfs snapshot, rebooted and tried again, and it still triggered the crash.

kwin_wayland_wrapper[2741]: /usr/include/c++/13.2.1/bits/stl_algo.h:3669: constexpr const _Tp& std::clamp(const _Tp&, const _Tp&, const _Tp&) [with _Tp = double]: Assertion '!(__hi < __lo)' failed.
systemd[1]: Started Process Core Dump (PID 3339/UID 0).
systemd-coredump[3340]: [🡕] Process 2741 (kwin_wayland) of user 1000 dumped core.

Opening a zip file with ark and selecting one of the text files inside and tapping preview may also trigger the same crash, I tried it with two different zip files, one crashed every time and one didn't crash every time.
Comment 1 Bug Janitor Service 2023-12-08 16:18:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4771
Comment 2 Zamundaaa 2023-12-11 19:43:15 UTC
Git commit 63c71d9e5632c7928968ad7cb2c14cb09647314d by Xaver Hugl.
Committed on 11/12/2023 at 14:44.
Pushed by zamundaaa into branch 'master'.

wayland/xdgshell: enforce invalid_size errors

If the client sets invalid min or max size, that can cause some code in KWin
to assert. To ensure that doesn't happen, enforce that the minimum size is
always at most as big as the maximum.

M  +9    -2    src/wayland/xdgshell.cpp

https://invent.kde.org/plasma/kwin/-/commit/63c71d9e5632c7928968ad7cb2c14cb09647314d
Comment 3 Zamundaaa 2023-12-11 19:43:23 UTC
Git commit d228dc173a24bc27a895d4924936a1d91d7c25b9 by Xaver Hugl.
Committed on 11/12/2023 at 18:07.
Pushed by zamundaaa into branch 'master'.

xdgshellwindow: make maxSize always >= minSize by enforcing the same minimum

M  +4    -2    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/d228dc173a24bc27a895d4924936a1d91d7c25b9
Comment 4 Zamundaaa 2023-12-11 21:56:01 UTC
Git commit 0d59f48fbf2cbbcc71556f0ce005d939c604f2c4 by Xaver Hugl.
Committed on 11/12/2023 at 22:43.
Pushed by zamundaaa into branch 'Plasma/5.27'.

xdgshellwindow: make maxSize always >= minSize by enforcing the same minimum


(cherry picked from commit d228dc173a24bc27a895d4924936a1d91d7c25b9)

M  +4    -2    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/0d59f48fbf2cbbcc71556f0ce005d939c604f2c4
Comment 5 Zamundaaa 2023-12-25 19:32:38 UTC
*** Bug 478973 has been marked as a duplicate of this bug. ***
Comment 6 Zamundaaa 2024-01-01 15:44:45 UTC
*** Bug 479258 has been marked as a duplicate of this bug. ***
Comment 7 Zamundaaa 2024-01-06 22:40:28 UTC
*** Bug 479387 has been marked as a duplicate of this bug. ***
Comment 8 Zamundaaa 2024-01-08 17:45:55 UTC
*** Bug 479387 has been marked as a duplicate of this bug. ***
Comment 9 Zamundaaa 2024-01-22 13:37:35 UTC
*** Bug 480144 has been marked as a duplicate of this bug. ***
Comment 10 Zamundaaa 2024-01-29 19:32:07 UTC
*** Bug 480496 has been marked as a duplicate of this bug. ***