xdgshellwindow: make maxSize always >= minSize by enforcing the same minimum

BUG: 478269